--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>name.remal.tools.test</groupId>
+            <artifactId>junit5</artifactId>
+            <version>1.26.147</version>
+        </dependency>
+    </dependencies>
+
 </project>
