:memo: Update gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
-theme: jekyll-theme-cayman
+# theme
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+# title
+title: GenSqlByCSV
+description: The util to batch generate sql.
+
+show_downloads: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
+# google_analytics: [Your Google Analytics tracking ID]
