--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,8 @@ plugins:
 title: GenSqlByCSV
 description: The util to batch generate sql.
 
-show_downloads: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
+show_downloads: true
+github:
+  zip_url: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
+# show_downloads: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
 # google_analytics: [Your Google Analytics tracking ID]
