--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,4 @@ plugins:
 # title
 title: GenSqlByCSV
 description: The util to batch generate sql.
-
-show_downloads: true
-github:
-  zip_url: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
-# show_downloads: https://github.com/maue-opensource/gensqlbycsv/releases/download/v1.0.2/gensqlbycsv-1.0.2.jar
-# google_analytics: [Your Google Analytics tracking ID]
+show_downloads: false
